--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "runDev": "nodemon server.js",
-    "run": "node server.js production",
+    "startDev": "nodemon server.js",
+    "start": "node server.js production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
